objects/OAH_Additional_Appeal_Outcome__c.object
<CustomObject>
    <label>OAH Additional Appeal Outcome</label>
    <nameField>
        <displayFormat>AAO-{YYYY}-{0000}</displayFormat>
        <label>OAH Additional Appeal Outcome ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAH Additional Appeal Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Appeal_Outcome__c</fullName>
        <description>This is for Appeal Outcomes in addition to the first Appeal Outcome in the Case Info section above.</description>
        <label>Appeal Outcome</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affirmed</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>Remanded</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division_Agency__c</fullName>
        <formula>TEXT(OAH_Case_Number__r.Division_Agency__c)</formula>
        <label>Division Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAH_Case_Number__c</fullName>
        <label>OAH Case Number</label>
        <referenceTo>OAH_Case_List__c</referenceTo>
        <relationshipLabel>OAH Additional Appeal Outcomes</relationshipLabel>
        <relationshipName>OAH_Additional_Appeal_Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>